--- a/sections/contact.liquid
+++ b/sections/contact.liquid
@@ -38,7 +38,7 @@
                 </div>
                 <div class="contact-hero__bg">
                     <div class="contact-hero__fst-bg">
-                        <img src="{{'contact-hero-bg-1.png' | asset_url }}" alt="">
+                        <img src="{{'contact-hero-bg-1.webp' | asset_url }}" alt="">
                     </div>
                     <div class="contact-hero__second-bg">
                         <img src="{{'contact-hero-bg-2.png' |  asset_url }}" alt="">
