--- a/assets/style.css
+++ b/assets/style.css
@@ -759,7 +759,7 @@ body.navShown{overflow-y: hidden}
 .trustpilot-wrapper img{margin-right: var(--space-default-sml); max-height: 22px;}
 .trustpilot-wrapper p{line-height: 1;}
 
-.page-header-contained{overflow: unset; min-height: 580px;}
+.page-header-contained{overflow: unset; min-height: 580px; display:flex; align-items: stretch;}
 .page-header-contained .container-inner{min-height: 505px;}
 /* .page-header-contained .container-inner{height:calc(100dvh - 108px)} */
 .page-header-contained .container-inner .common-wrap, .page-header-contained .container-inner .grid-container{height: 100%;;}
@@ -925,7 +925,7 @@ body.navShown{overflow-y: hidden}
 
 .call-to-action-section .parallax-chips{width: 17.6%; left: 40%; bottom: 12%;}
 
-.sticker{right: 7.7%; bottom: 15%}
+.sticker{right: 7.7%; bottom: 6%}
 .protein-sticker{max-width: 140px; bottom: 28px;}
 
 .font-alt{font-family: var(--font-family-alt); -moz-osx-font-smoothing: grayscale;-webkit-font-smoothing: antialiased;}
@@ -1469,7 +1469,9 @@ object-fit: contain;
     .promo-tob-bar{font-size: 14px;}
 
     .page-header-section{flex-flow: column-reverse;}
-
+    .page-header-section .grid-item .bg-img {
+      min-height: 500px;
+    }
     .call-to-action-sml-wrapper{flex-flow: column-reverse;}
   .call-to-action-sml-wrapper .parallax-top figure img{height: 100%;}
 
@@ -2085,7 +2087,7 @@ object-fit: contain;
      .trustpilot-wrapper p{font-size: 18px;}
 
 
-     .puffs-visual-header div:nth-child(1){right: 41%;width: 10.34722222%; top: 8%;}
+     .puffs-visual-header div:nth-child(1){right: 51%;width: 10.34722222%; top: 8%;}
       .puffs-visual-header div:nth-child(2){left: 10.5%;width: 8.333333333%; bottom: 8.5%;}
       .puffs-visual-header div:nth-child(3){left: 20%;width: 10.06944444%; bottom: -12%;}
 
