--- a/sections/cart-drawer.liquid
+++ b/sections/cart-drawer.liquid
@@ -14,8 +14,12 @@
     </div>
     <div class="flex flex-space-between flex-col cart__drawer-items-wrap  cart-body">
 
-
+    {% assign totalCartProtein = 0 %}
     {% for item in cart.items %}
+        {% if item.variant.metafields.custom.protein_amount != blank and item.variant.metafields.custom.variant_unit_quantity != blank %}
+        {% assign proteinAmount = item.variant.metafields.custom.protein_amount | times: item.variant.metafields.custom.variant_unit_quantity | times: item.quantity %}
+            {% assign totalCartProtein = totalCartProtein | plus: proteinAmount %}
+        {% endif %}
         <div class="flex flex-space-between padding-default cart-item">
             <div class="flex cart-product-details">
                 <div class="cart-item-thumb padding-right-m br-10x">
@@ -116,6 +120,11 @@
     </div>
     
     <div class="border-top cart-footer">
+        {% if totalCartProtein > 0 %}
+        <div class="flex flex-y-align flex-space-between total-protein-cart padding-default border-btm">
+            <h6>TOTAL PROTEIN IN YOUR CART</h6><h6>{{totalCartProtein}}g</h6>
+        </div>
+        {% endif %}
         {% comment %}
         <div class="flex flex-y-align rating padding-default border-btm">
             <div class="flex star-wrap flex-y-align margin-right-default-sml">
