--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -212,7 +212,7 @@
                         <div class="button button--stroke on__time-purchase btn btn-secondary btn-medium flex flex-x-align flex-y-align showCart add__to-cart" data-block="button">
                           <span class="button__flair"></span>
                           <span class="button__label">
-                            <span>{% if button_details != blank and enable_button_variation == true %}{{button_label}}{% else %}Add to Cart{% endif %}</span>&nbsp;-&nbsp;<span class="product__variant-price">{{ product.price | money }}</span>
+                            <span>{% if product.available %}{% if button_details != blank and enable_button_variation == true %}{{button_label}}{% else %}Add to Cart{% endif %}{% else %}OUT OF STOCK {% endif %}</span>&nbsp;-&nbsp;<span class="product__variant-price">{{ product.price | money }}</span>
                           </span>
                         </div> 
                         {% if subtext != blank and enable_button_variation == true %}<span class="caption txt-ctr">{{ subtext }}</span>{% endif %}
@@ -270,7 +270,7 @@
                               <div class="button button--stroke btn btn-secondary btn-medium flex flex-x-align flex-y-align showCart add__to-cart" data-block="button">
                                 <span class="button__flair"></span>
                                 <span class="button__label">
-                                  <span>{% if button_details != blank and enable_button_variation == true %}{{button_label}}{% else %}Add to Cart{% endif %}</span>&nbsp;-&nbsp;<span clsss="subscription-price-display">{{ selling_price | money }}</span>
+                                  <span>{% if product.available %}{% if button_details != blank and enable_button_variation == true %}{{button_label}}{% else %}Add to Cart{% endif %}{% else %}OUT OF STOCK {% endif %}</span>&nbsp;-&nbsp;<span clsss="subscription-price-display">{{ selling_price | money }}</span>
                                 </span>
                               </div>
                         {% comment %} {% endform %} {% endcomment %}
