adding cookiehub script

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -18,6 +18,13 @@
       {%- if current_page != 1 %} &ndash; Page {{ current_page }}{% endif -%}
       {%- unless page_title contains shop.name %} &ndash; {{ shop.name }}{% endunless -%}
     </title>
+    <script src="https://cdn.cookiehub.eu/c2/c2a1b2a7.js"></script>
+    <script type="text/javascript">
+    document.addEventListener("DOMContentLoaded", function(event) {
+    var cpm = {};
+    window.cookiehub.load(cpm);
+    });
+    </script>
     <script async src="https://usedream.ai/tracking.js?id=WsG5nR6vqDpfzG4gCxhZGQ"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -85,5 +92,6 @@
         }
       });
     </script>
+    
   </body>
 </html>
