--- a/sections/snack-with-impact.liquid
+++ b/sections/snack-with-impact.liquid
@@ -17,6 +17,15 @@
                                     <span class="button__flair"></span>
                                     <span class="button__label">{{ s.btn_label }}</span>
                                 </a>
+                                {% for block in section.blocks %}
+                                    {% assign b = block.settings %}
+                                    {% if block.type == 'button' and b.btn_label != blank and b.btn_url != blank %}
+                                        <a href="{{ b.btn_url }}" class="button button--stroke btn btn-secondary btn-large" data-block="button">
+                                            <span class="button__flair"></span>
+                                            <span class="button__label">{{ b.btn_label }}</span>
+                                        </a>
+                                    {% endif %}
+                                {% endfor %}
                             </div>                            
                         {% endif %}
                     </div>
@@ -84,6 +93,23 @@
             "type": "url",
             "id": "btn_url",
             "label": "Button URL"
+            }
+        ],
+        "blocks":[
+            {
+                "type": "button",
+                "name": "Button",
+                "settings": [
+                    {
+                        "type": "text",
+                        "id": "btn_label",
+                        "label": "Button Label"
+                    },{
+                        "type": "url",
+                        "id": "btn_url",
+                        "label": "Button URL"
+                    }
+                ]
             }
         ],
         "presets": [
