--- a/assets/style.css
+++ b/assets/style.css
@@ -1254,7 +1254,8 @@ h3 .underline-animation, .h3 .underline-animation{bottom: -1px;}
 /* footer */
 .footer-section{padding-top: 50px; overflow: hidden;}
 .newsletter-wrap h3 .font-alt{font-size: 48px;}
-.newsletter-wrap .multi-font-heading .underline-animation{width: 71px; left: 37%;bottom: -8px;}
+/* .newsletter-wrap .multi-font-heading .underline-animation{width: 71px; left: 37%;bottom: -8px;} */
+.newsletter-wrap .multi-font-heading .underline-animation{width: 100%; left: 0;bottom: -8px;}
 .newsletter-wrap .form-wrapper{margin-top: 12px;}
 .newsletter-wrap input[type="email"]{border:0; border-radius: 10px; padding: 16px 19px; font-size:16px; line-height: 1; font-weight: var(--font-ultra-light); font-family: var(--font-family); color: var(--black); width: 100%; background-color: var(--neutral);}
 .newsletter-wrap input[type="submit"]{position: absolute; right: 0; text-transform: uppercase; font-size: 16px; border: 0; background-color: transparent;font-family: var(--font-family); font-weight: var(--font-bold);padding: var(--space-default-sml) var(--space-m); height: 100%; color: var(--black); }
