--- a/sections/snack-with-impact.liquid
+++ b/sections/snack-with-impact.liquid
@@ -20,7 +20,7 @@
                                 {% for block in section.blocks %}
                                     {% assign b = block.settings %}
                                     {% if block.type == 'button' and b.btn_label != blank and b.btn_url != blank %}
-                                        <a href="{{ b.btn_url }}" class="button button--stroke btn btn-secondary btn-large" data-block="button">
+                                        <a href="{{ b.btn_url }}" class="button button--stroke btn {{ b.btn_color }} btn-large" data-block="button">
                                             <span class="button__flair"></span>
                                             <span class="button__label">{{ b.btn_label }}</span>
                                         </a>
@@ -100,6 +100,22 @@
                 "type": "button",
                 "name": "Button",
                 "settings": [
+                    {
+                        "type": "select",
+                        "id": "btn_color",
+                        "label": "Button Color",
+                        "options": [
+                          {
+                            "value": "btn-primary",
+                            "label": "White"
+                          },
+                          {
+                            "value": "btn-secondary",
+                            "label": "Yellow"
+                          }
+                        ],
+                        "default": "btn-primary"
+                    },
                     {
                         "type": "text",
                         "id": "btn_label",
