--- a/sections/html-content.liquid
+++ b/sections/html-content.liquid
@@ -38,7 +38,7 @@
         ],
         "presets": [
         {
-            "name": "Favorite Products"
+            "name": "HTML Content"
         }
       ]
     }
