--- a/sections/html-content.liquid
+++ b/sections/html-content.liquid
@@ -10,7 +10,7 @@
             {% endif %}
         </div>
         <div class="margin-top-xxl featured-product-wrap ">
-            {{ html }}
+            {{ section.settings.html }}
         </div>
     </div>
 </div>
