--- a/templates/customers/account.liquid
+++ b/templates/customers/account.liquid
@@ -8,7 +8,7 @@
   </div>
   <div class="common-wrap">
     <div class="customer__header">
-      <div class="customer__title">Heya, {{ customer.first_name }}</div>
+      <div class="customer__title h2">Heya, {{ customer.first_name }}</div>
       <div class="customer__message">
         <p>Welcome to your account. Check out previous orders and get delivery updates all in one place.</p>
       </div>
@@ -35,6 +35,9 @@
               href="/tools/recurring/login"
               data-target="#orders"
               class="customer__nav-url">Manage Subscriptions</a>
+          </div>
+          <div class="customer__nav-item">
+            <a href="/tools/recurring/login" class="customer__nav-url">Loyalty Points</a>
           </div>
           <a href="{{ routes.account_logout_url }}" class="customer__button btn btn_primary desk">Sign out</a>
           <!-- <div class="customer__nav-item">
