adding loyalty lion bits

--- a/sections/instagram.liquid
+++ b/sections/instagram.liquid
@@ -8,7 +8,8 @@
                     <span class="button__label">{{ s.btn_label }}</span>
                 </a>                
             {% endif %}
-            <div class="margin-top-default social-wrap instagram-social-wrap">
+            {% comment %} margin-top-default {% endcomment %}
+            <div class="social-wrap instagram-social-wrap">
                 {% render 'social-links' %}		
             </div>
         </div>
