--- a/assets/style.css
+++ b/assets/style.css
@@ -962,7 +962,12 @@ body.navShown{overflow-y: hidden}
 .instagram-feed .font-alt h2{font-size: 85px; font-family: inherit;}
 .social-marquee-slider .slide-item{max-width: 270px; aspect-ratio: 1 / 1 ;}
 .social-marquee-slider .slide-item img{height: 100%;}
-
+.instagram-feed .btn-wrap { 
+  
+  justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
 .instagram-social-wrap .flex {
   justify-content: center;
 }
@@ -1111,6 +1116,19 @@ h3 .underline-animation, .h3 .underline-animation{bottom: -1px;}
 
 .page-header-product-section .badge-wrapper{position: relative; right: auto; top: auto; left: auto;}
 .product-page-header-content .content-wrap{gap: var(--space-default);}
+.product-page-header-content .content-wrap a {
+  text-decoration: underline;
+}
+.product-points {
+  gap:6px
+}
+.points-block { background: #000;
+  padding: 0px 5px;
+  border-radius: 10px; }
+.points-block span {
+    color:#fff;
+    font-weight: bold;
+  }
 .product-page-header-content .h4{line-height: 1; margin-bottom: -4px;}
 .price h5, .price-details p, .product-price, .discount-txt .h6, .discount-txt .caption{line-height: 1;}
 .product-options-wrapper{width: 100%;}
